--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,8 @@
 :root {
     --header-height: 50px;
     --border: 1px solid #7d7d7d;
+    --table-border: 1px solid #dddddd;
+
     --color-primary: #4a81d4;
     --color-primary-hover: #3f6eb4;
 }
@@ -56,6 +58,40 @@ a {
     }
 }
 
+button {
+    padding: 4px 16px;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+
+    &:hover {
+        background-color: var(--color-primary-hover);
+    }
+}
+
+table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+    border: var(--table-border);
+
+    tbody {
+        tr:nth-child(odd) {
+            background-color: #f9f9f9;
+        }
+    }
+
+    th,
+    td {
+        padding: 8px;
+        font-size: 14px;
+        text-align: center;
+        border: var(--table-border);
+    }
+}
+
 .l-header__title {
     margin: 0;
     font-size: 16px;
@@ -65,7 +101,7 @@ a {
 .l-main__content {
     width: 100%;
     max-width: 1000px;
-    padding: 20px 40px 40px;
+    padding: 20px 40px 80px;
     background-color: #ffffff;
     box-shadow: 0px 0px 16px 4px #a7a7a7;
 }
