--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,8 @@
 :root {
     --header-height: 50px;
     --header-padding-x: 40px;
+    --z-index-header: 1000;
+    --z-index-modal: 1500;
     --border: 1px solid #7d7d7d;
     --table-border: 1px solid #dddddd;
 
@@ -23,7 +25,7 @@ header {
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1000;
+    z-index: var(--z-index-header);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -92,6 +94,21 @@ table {
         font-size: 14px;
         text-align: center;
         border: var(--table-border);
+    }
+}
+
+.no-scroll {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.text-link {
+    color: var(--color-accent);
+    cursor: pointer;
+
+    &:hover {
+        color: var(--color-accent-hover);
+        text-decoration: underline;
     }
 }
 
